--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: objective-c
+osx_image: xcode7.2
 xcode_project: Neeman.xcodeproj
 xcode_scheme: Neeman
 
@@ -6,4 +7,4 @@ script:
   - set -o pipefail
   - xcodebuild -version
   - xcodebuild -showsdks
-  - xcodebuild -project Neeman.xcodeproj -scheme Neeman -destination "OS=9.2,name=iPhone 6S Plus" test | xcpretty -c
+  - xcodebuild -project Neeman.xcodeproj -scheme Neeman -destination "OS=9.2,name=iPhone 6S Plus" test | xcpretty
