Show the cocoapods version.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ script:
   - set -o pipefail
   - xcodebuild -version
   - xcodebuild -showsdks
+  - echo "Cocoapods Version:"
+  - pod --version
 
   # Build Framework in ReleaseTest and Run Tests if specified
   - if [ $RUN_TESTS == "YES" ]; then
