--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ script:
 
   # Run `pod lib lint` if specified
   - if [ $POD_LINT == "YES" ]; then
-      pod lib lint;
+      pod lib lint --verbose;
     fi
 
 notifications:
