--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
 language: objective-c
 osx_image: xcode9.1
-branches:
-  only:
-    - master
 env:
   global:
   - LC_CTYPE=en_US.UTF-8
   - LANG=en_US.UTF-8
   - WORKSPACE=Neeman.xcworkspace
   - IOS_FRAMEWORK_SCHEME="Neeman"
+  - IOS_SDK=iphonesimulator11.0
   matrix:
     - DESTINATION="OS=11.0,name=iPhone X"          SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="YES"
     - DESTINATION="OS=10.3.1,name=iPhone 7 Plus"   SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="NO"
