--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: objective-c
-osx_image: xcode9.1
+osx_image: xcode9.3
+branches:
+  only:
+    - master
 env:
   global:
   - LC_CTYPE=en_US.UTF-8
