--- a/.travis.yml
+++ b/.travis.yml
@@ -1,38 +1,12 @@
-language: objective-c
-osx_image: xcode9.3
+language: swift
+osx_image: xcode10
+xcode_sdk: iphonesimulator12.0
+xcode_project: Neeman.xcodeproj
+xcode_scheme: Neeman
+
 branches:
-  only:
-    - master
-env:
-  global:
-  - LC_CTYPE=en_US.UTF-8
-  - LANG=en_US.UTF-8
-  - WORKSPACE=Neeman.xcworkspace
-  - IOS_FRAMEWORK_SCHEME="Neeman"
-  matrix:
-    - DESTINATION="OS=11.1,name=iPhone X"          SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="YES"
-    - DESTINATION="OS=10.3.1,name=iPhone 7 Plus"   SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="NO"
-    - DESTINATION="OS=9.0,name=iPhone 6"           SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="NO"
-    - DESTINATION="OS=9.0,name=iPhone 4S"          SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="NO"
-before_install:
-  - gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
-script:
-  - set -o pipefail
-  - xcodebuild -version
-  - pod --version
+ only:
+ - master
 
-  # Build Framework in ReleaseTest and Run Tests if specified
-  - if [ $RUN_TESTS == "YES" ]; then
-      xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration ReleaseTest ONLY_ACTIVE_ARCH=NO test | xcpretty;
-    else
-      xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty;
-    fi
-
-  # Run `pod lib lint` if specified
-  - if [ $POD_LINT == "YES" ]; then
-      pod lib lint --verbose;
-    fi
-
-notifications:
-  email: true
-
+ script:
+  - xcodebuild -scheme "$TRAVIS_XCODE_SCHEME" -project "$TRAVIS_XCODE_PROJECT" -sdk "$TRAVIS_XCODE_SDK" test
