--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,9 @@ script:
 
   # Build Framework in ReleaseTest and Run Tests if specified
   - if [ $RUN_TESTS == "YES" ]; then
-      xcodebuild -scheme "$SCHEME" -destination "$DESTINATION" -configuration ReleaseTest ONLY_ACTIVE_ARCH=NO test | xcpretty;
+      xcodebuild -scheme "$SCHEME" -destination "$DESTINATION" -configuration ReleaseTest test | xcpretty;
     else
-      xcodebuild -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty;
+      xcodebuild -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release     build | xcpretty;
     fi
 
   # Run `pod lib lint` if specified
